--- a/PLATFORM/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
+++ b/PLATFORM/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Controllers\Api\CommerceController.cs" />
     <Compile Include="Controllers\PredefinedPermissions.cs" />
     <Compile Include="Converters\FulfillmentCenterConverter.cs" />
+    <Compile Include="ExportImport\FulfillmentExportImport.cs" />
     <Compile Include="Model\FulfillmentCenter.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
