Fixed MSBuild compilation error.
Former-commit-id: cc28eaf8f8623354cc72e9f665da4f7c63cd4445

--- a/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
@@ -1458,12 +1458,12 @@
     <Content Include="Scripts\version.json" />
     <Content Include="Views\Shared\_GoogleAnalyticsPartial.cshtml" />
     <Content Include="Scripts\underscore.min.map" />
-    <None Include="Web.Debug.config">
+    <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
-    </None>
-    <None Include="Web.Release.config">
+    </Content>
+    <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
-    </None>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Modules\" />
@@ -1534,7 +1534,6 @@
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
-
   <!-- Transform Web.config -->
   <UsingTask TaskName="TransformXml" AssemblyFile="$(VSToolsPath)\Web\Microsoft.Web.Publishing.Tasks.dll" Condition="Exists('$(VSToolsPath)\Web\Microsoft.Web.Publishing.Tasks.dll')" />
   <PropertyGroup>
@@ -1544,19 +1543,15 @@
     <StackTraceEnabled>False</StackTraceEnabled>
   </PropertyGroup>
   <ItemGroup>
-    <OriginalWebConfig Include="$(WebProjectOutputDir)\Web.config"/>
-    <TempWebConfig Include="$(WebProjectOutputDir)\Web.Temp.config"/>
+    <OriginalWebConfig Include="$(WebProjectOutputDir)\Web.config" />
+    <TempWebConfig Include="$(WebProjectOutputDir)\Web.Temp.config" />
   </ItemGroup>
   <Target Name="TransformWebConfig" AfterTargets="Build">
     <!-- Copy our web.config into a temp folder as the 'TransformXml' task has a file lock bug -->
     <Copy SourceFiles="@(OriginalWebConfig)" DestinationFiles="@(TempWebConfig)" />
-    <TransformXml Source="$(TransformInputFile)"
-                  Transform="$(TransformFile)"
-                  Destination="$(TransformOutputFile)"
-                  StackTrace="$(StackTraceEnabled)" />
-    <Delete Files="@(TempWebConfig)"/>
+    <TransformXml Source="$(TransformInputFile)" Transform="$(TransformFile)" Destination="$(TransformOutputFile)" StackTrace="$(StackTraceEnabled)" />
+    <Delete Files="@(TempWebConfig)" />
   </Target>
-
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
