manifest, xml, api-key, ignoreapi, menu docs, model docs
Former-commit-id: 962a5a5bf372c4730611c108fa36a5b25dd5e35e

--- a/PLATFORM/Modules/Swashbuckle/Swashbuckle.Module.Web/SwashbuckleModule.Web.csproj
+++ b/PLATFORM/Modules/Swashbuckle/Swashbuckle.Module.Web/SwashbuckleModule.Web.csproj
@@ -112,6 +112,7 @@
       <Name>VirtoCommerce.Platform.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
