Enabled XML documentation for Platform.Core.
Former-commit-id: 4056aa1b20ce83ce9e3b6a51a3133dd138423f6b

--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -26,6 +26,8 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <UseVSHostingProcess>true</UseVSHostingProcess>
+    <DocumentationFile>bin\Debug\VirtoCommerce.Platform.Core.XML</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -36,6 +38,8 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>bin\Release\VirtoCommerce.Platform.Core.XML</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Common.Logging">
