--- a/PLATFORM/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
+++ b/PLATFORM/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
@@ -40,6 +40,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\VirtoCommerce.CoreModule.Web.XML</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
