add vc styles, custom assets, index html, css, image
Former-commit-id: 8dba643327ae1a0f6ca6f84693f8d232da104d8c

--- a/PLATFORM/Modules/Swashbuckle/Swashbuckle.Module.Web/SwashbuckleModule.Web.csproj
+++ b/PLATFORM/Modules/Swashbuckle/Swashbuckle.Module.Web/SwashbuckleModule.Web.csproj
@@ -91,6 +91,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <EmbeddedResource Include="Extensions\index.html" />
+    <EmbeddedResource Include="Extensions\logo_small.png" />
+    <EmbeddedResource Include="Extensions\vc.css" />
     <Content Include="module.manifest" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
