--- a/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
@@ -1544,16 +1544,13 @@
     <TransformOutputFile>$(WebProjectOutputDir)\Web.config</TransformOutputFile>
     <StackTraceEnabled>False</StackTraceEnabled>
   </PropertyGroup>
-  <ItemGroup>
-    <OriginalWebConfig Include="$(WebProjectOutputDir)\Web.config" />
-    <TempWebConfig Include="$(WebProjectOutputDir)\Web.Temp.config" />
-  </ItemGroup>
   <Target Name="TransformWebConfig" AfterTargets="Build">
     <!-- Copy our web.config into a temp folder as the 'TransformXml' task has a file lock bug -->
-    <Copy SourceFiles="@(OriginalWebConfig)" DestinationFiles="@(TempWebConfig)" />
+    <Copy SourceFiles="$(TransformOutputFile)" DestinationFiles="$(TransformInputFile)" />
     <TransformXml Source="$(TransformInputFile)" Transform="$(TransformFile)" Destination="$(TransformOutputFile)" StackTrace="$(StackTraceEnabled)" />
-    <Delete Files="@(TempWebConfig)" />
+    <Delete Files="$(TransformInputFile)" />
   </Target>
+
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
