add export models menu link lists content module, add notification test model
Former-commit-id: 6987fec185c451096a1f536067af17ebf2b8a405

--- a/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
@@ -286,6 +286,7 @@
     <Compile Include="BackgroundJobs\SendNotificationsJobs.cs" />
     <Compile Include="Converters\ExportImport\ExportImportRequestConverter.cs" />
     <Compile Include="Model\ExportImport\PushNotifications\SampleDataImportPushNotification.cs" />
+    <Compile Include="Model\Notifications\RenderNotificationContentResult.cs" />
     <Compile Include="VirtoCommercePlatformWebBootstrapper.cs" />
     <Compile Include="Controllers\Api\AssetsController.cs" />
     <Compile Include="Controllers\Api\DynamicPropertiesController.cs" />
