changes in js for api menu elements, changes in css for it, added swagger-ui.js as custom asset
Former-commit-id: 607ec5a5173774c73222a269483cfd8ecab33a4d

--- a/PLATFORM/Modules/Swashbuckle/Swashbuckle.Module.Web/SwashbuckleModule.Web.csproj
+++ b/PLATFORM/Modules/Swashbuckle/Swashbuckle.Module.Web/SwashbuckleModule.Web.csproj
@@ -104,6 +104,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="SwaggerUi\CustomAssets\swagger-ui.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
