platform - templates added for module installation process notifications
Former-commit-id: 07ea49982c7d1aac88e9c1506fad64a82b748ea0

--- a/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
@@ -403,6 +403,8 @@
     <Content Include="Scripts\app\packaging\blades\module-detail.tpl.html" />
     <Content Include="Scripts\app\packaging\blades\modules-list.js" />
     <Content Include="Scripts\app\packaging\blades\modules-list.tpl.html" />
+    <Content Include="Scripts\app\packaging\notifications\history.tpl.html" />
+    <Content Include="Scripts\app\packaging\notifications\menu.tpl.html" />
     <Content Include="Scripts\app\settings\blades\entitySetting-list.js" />
     <Content Include="Scripts\app\settings\blades\entitySetting-list.tpl.html" />
     <Content Include="Scripts\app\settings\widgets\entitySettingsWidget.js" />
