--- a/PLATFORM/VirtoCommerce.Platform.Web/Web.config
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Web.config
@@ -3,6 +3,7 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
+
 <configuration>
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -10,13 +11,11 @@
 		<section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
 		<section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
 	</configSections>
-
 	<logging>
 		<factoryAdapter type="Common.Logging.NLog.NLogLoggerFactoryAdapter, Common.Logging.NLog32">
 			<arg key="configType" value="INLINE" />
 		</factoryAdapter>
 	</logging>
-
 
 	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 		<targets>
@@ -29,9 +28,7 @@
 	</nlog>
 	<connectionStrings>
 		<!-- Database Connection String -->
-		<add name="VirtoCommerce" connectionString="Data Source=(local);Initial Catalog=VirtoCommerce2;Persist Security Info=True;User ID=virto;Password=virto;MultipleActiveResultSets=True;Connect Timeout=420" providerName="System.Data.SqlClient" />
-
-
+		<add name="VirtoCommerce" connectionString="Data Source=(local);Initial Catalog=VirtoCommerce3;Persist Security Info=True;User ID=virto;Password=virto;MultipleActiveResultSets=True;Connect Timeout=420" providerName="System.Data.SqlClient" />
 
 		<!-- Assets Connection String -->
 		<!--<add name="AssetsConnectionString" connectionString="provider=LocalStorage;rootPath=~/App_Data/Assets;publicUrl=http://localhost/VirtoCommerce.Platform.Web/Assets" />-->
@@ -50,7 +47,8 @@
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-		<add key="VirtoCommerce:SampleDataLevel" value="Full" />
+		<add key="VirtoCommerce:SampleDataLevel" value="None" />
+		<add key="VirtoCommerce:SampleDataPath" value="~/App_Data/SampleData/sampleData.zip"/>
 		<add key="VirtoCommerce:Authentication:Cookies.Enabled" value="true" />
 		<add key="VirtoCommerce:Authentication:Cookies.ValidateInterval" value="1:00:00:00" />
 		<add key="VirtoCommerce:Authentication:BearerTokens.Enabled" value="true" />
@@ -64,6 +62,7 @@
 	<system.web>
 		<!--<authentication mode="Forms" />-->
 		<compilation debug="true" targetFramework="4.5.1" />
+		<!-- 50MB in kilobytes, default is 4096 or 4MB-->
 		<httpRuntime targetFramework="4.5.1" maxRequestLength="1048576" />
 		<customErrors mode="Off" />
 		<pages>
@@ -97,6 +96,13 @@
 			<!-- In case IIS already has this mime type -->
 			<mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
 		</staticContent>
+
+		<security>
+			<requestFiltering>
+				<!-- 50MB in bytes, default is 30000000 or approx. 28.6102 Mb-->
+				<requestLimits maxAllowedContentLength="52428800" />
+			</requestFiltering>
+		</security>
 	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -194,18 +200,5 @@
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
-	<location path="api/modules">
-		<system.web>
-			<!-- 50MB in kilobytes, default is 4096 or 4MB-->
-			<httpRuntime maxRequestLength="51200" />
-		</system.web>
-		<system.webServer>
-			<security>
-				<requestFiltering>
-					<!-- 50MB in bytes, default is 30000000 or approx. 28.6102 Mb-->
-					<requestLimits maxAllowedContentLength="52428800" />
-				</requestFiltering>
-			</security>
-		</system.webServer>
-	</location>
+	
 </configuration>
