--- a/PLATFORM/VirtoCommerce.Platform.Web/Web.config
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Web.config
@@ -27,6 +27,7 @@
             <logger name="*" writeTo="debugger" />
         </rules>
     </nlog>
+	
     <connectionStrings>
 		<!-- Database Connection String -->
 		<add name="VirtoCommerce" connectionString="Data Source=(local);Initial Catalog=VirtoCommerce2;Persist Security Info=True;User ID=virto;Password=virto;MultipleActiveResultSets=True;Connect Timeout=420" providerName="System.Data.SqlClient" />
@@ -46,8 +47,7 @@
         <add key="ClientValidationEnabled" value="true" />
         <add key="UnobtrusiveJavaScriptEnabled" value="true" />
         <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-        <add key="VirtoCommerce:SampleDataLevel" value="None" />
-        <add key="VirtoCommerce:SampleDataPath" value="~/App_Data/SampleData/sampleData.zip"/>
+        <add key="VirtoCommerce:SampleDataUrl" value="http://virtocommerce.blob.core.windows.net/sample-data"/>
         <add key="VirtoCommerce:Authentication:Cookies.Enabled" value="true" />
         <add key="VirtoCommerce:Authentication:Cookies.ValidateInterval" value="1:00:00:00" />
         <add key="VirtoCommerce:Authentication:BearerTokens.Enabled" value="true" />
@@ -58,6 +58,7 @@
         <add key="VirtoCommerce:Authentication:ApiKeys.HttpHeaderName" value="api_key" />
         <add key="VirtoCommerce:Authentication:ApiKeys.QueryStringParameterName" value="api_key" />
     </appSettings>
+	
     <system.web>
         <!--<authentication mode="Forms" />-->
         <compilation debug="true" targetFramework="4.5.1" />
