--- a/PLATFORM/Modules/Core/VirtoCommerce.CoreModule.Data/VirtoCommerce.CoreModule.Data.csproj
+++ b/PLATFORM/Modules/Core/VirtoCommerce.CoreModule.Data/VirtoCommerce.CoreModule.Data.csproj
@@ -64,9 +64,14 @@
     <Compile Include="Migrations\201506221214574_SeoRenaming.Designer.cs">
       <DependentUpon>201506221214574_SeoRenaming.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201508180627556_Sequences.cs" />
+    <Compile Include="Migrations\201508180627556_Sequences.Designer.cs">
+      <DependentUpon>201508180627556_Sequences.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\FulfillmentCenter.cs" />
     <Compile Include="Model\SeoUrlKeyword.cs" />
+    <Compile Include="Model\Sequence.cs" />
     <Compile Include="Payment\DefaultManualPaymentMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CommerceRepositoryImpl.cs" />
@@ -102,6 +107,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201506221214574_SeoRenaming.resx">
       <DependentUpon>201506221214574_SeoRenaming.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508180627556_Sequences.resx">
+      <DependentUpon>201508180627556_Sequences.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Repositories\Sql\SeoUrlKeyword.sql" />
   </ItemGroup>
