unique number generator moved from order to core module
Former-commit-id: f1c65d69a2c49491eb6bf3ddea6a656f9d02e4a5

--- a/PLATFORM/Modules/Core/VirtoCommerce.CoreModule.Data/VirtoCommerce.CoreModule.Data.csproj
+++ b/PLATFORM/Modules/Core/VirtoCommerce.CoreModule.Data/VirtoCommerce.CoreModule.Data.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Repositories\CommerceRepositoryImpl.cs" />
     <Compile Include="Repositories\IСommerceRepository.cs" />
     <Compile Include="Services\CommerceServiceImpl.cs" />
+    <Compile Include="Services\SequenceUniqueNumberGeneratorServiceImpl.cs" />
     <Compile Include="Shipping\FixedRateShipmentMethod.cs" />
   </ItemGroup>
   <ItemGroup>
