TimeBasedNumberGeneratorImpl moved to core module

--- a/PLATFORM/Modules/Core/VirtoCommerce.CoreModule.Data/VirtoCommerce.CoreModule.Data.csproj
+++ b/PLATFORM/Modules/Core/VirtoCommerce.CoreModule.Data/VirtoCommerce.CoreModule.Data.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Repositories\IСommerceRepository.cs" />
     <Compile Include="Services\CommerceServiceImpl.cs" />
     <Compile Include="Services\SequenceUniqueNumberGeneratorServiceImpl.cs" />
+    <Compile Include="Services\TimeBasedNumberGeneratorImpl.cs" />
     <Compile Include="Shipping\FixedRateShipmentMethod.cs" />
   </ItemGroup>
   <ItemGroup>
