modules - icons placed to modules' content folder

--- a/PLATFORM/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
+++ b/PLATFORM/Modules/Core/VirtoCommerce.Core.Web/VirtoCommerce.CoreModule.Web.csproj
@@ -146,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\dynamic-expression.css" />
+    <Content Include="Content\logoVC.png" />
     <Content Include="module.manifest" />
     <Content Include="Scripts\common\blades\address-list.js" />
     <Content Include="Scripts\common\blades\address-detail.js" />
