--- a/PLATFORM/Modules/Fulfillment/Shipstation.FulfillmentModule.Web/Shipstation.FulfillmentModule.Web.csproj
+++ b/PLATFORM/Modules/Fulfillment/Shipstation.FulfillmentModule.Web/Shipstation.FulfillmentModule.Web.csproj
@@ -19,6 +19,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -82,6 +83,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\logo.png" />
     <Content Include="packages.config" />
     <Content Include="module.manifest">
       <SubType>Designer</SubType>
