--- a/PLATFORM/Modules/Merchant/GoogleShopping.Merchant.Web/GoogleShopping.MerchantModule.Web.csproj
+++ b/PLATFORM/Modules/Merchant/GoogleShopping.Merchant.Web/GoogleShopping.MerchantModule.Web.csproj
@@ -19,6 +19,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -135,6 +136,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Google-Shopping-Logo1.jpg" />
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
