--- a/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
+++ b/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
@@ -20,6 +20,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <NuGetPackageImportStamp>ae2b9ccd</NuGetPackageImportStamp>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -90,6 +91,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\400.png" />
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
