--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Asset\IBlobUrlResolver.cs" />
     <Compile Include="Asset\IBlobStorageProvider.cs" />
     <Compile Include="Asset\UploadStreamInfo.cs" />
+    <Compile Include="ChangeLog\IHasChangesHistory.cs" />
     <Compile Include="Common\ConfigManagerExtensions.cs" />
     <Compile Include="Common\PlatformVersion.cs" />
     <Compile Include="Common\SemanticVersion.cs" />
