--- a/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
@@ -417,6 +417,7 @@
     <Content Include="Scripts\app\security\blades\account-api-list.tpl.html" />
     <Content Include="Scripts\app\security\blades\account-resetPassword.tpl.html" />
     <Content Include="Scripts\app\security\blades\account-resetPassword.js" />
+    <Content Include="Scripts\common\directives\vaTabs.js" />
     <Content Include="Scripts\common\templates\ok.tpl.html" />
     <Content Include="Scripts\common\templates\home.tpl.html" />
     <Content Include="Scripts\app\packaging\packaging.js" />
