add woff2 font, add glyphicons-halflings

--- a/PLATFORM/VirtoCommerce.Platform.Web/Web.config
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Web.config
@@ -84,8 +84,10 @@
         </handlers>
         <staticContent>
             <remove fileExtension=".woff" />
+            <remove fileExtension=".woff2"/>
             <!-- In case IIS already has this mime type -->
             <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+            <mimeMap fileExtension=".woff2" mimeType="application/font-woff2"/>
         </staticContent>
         <security>
             <requestFiltering>
